# claude-model-router

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: example.json
docs/: README.md  README_CN.md
docs/wiki/: API参考.md  使用指南.md  开发指南.md  故障排查.md  架构设计.md  核心组件.md  配置说明.md  项目概述.md  首页.md
scripts/: claude-model-router.cmd  cmr.cmd
src/claude_model_router/: __init__.py  cli.py  config.py  env.py  ip_detect.py  proxy.py  proxy_manager.py
tests/: __init__.py  test_config.py
